# jump-and-run-platform

./: Cargo.toml  README.md  highscores.json
src/: background.rs  camera.rs  character.rs  character_run.rs  character_spawn.rs  collision.rs  environment.rs  grid.rs  log.rs  main.rs  microbit.rs  movement.rs  moving_road.rs  scoreboard.rs  tileset.rs  world_grid.rs
