[package]
name = "jump-and-run-platform"
version = "0.1.0"
edition = "2021"

# Add this to your dependencies section
[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
wasm-bindgen = "0.2.100"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


