[package]
name = "jump-and-run-platform"
version = "0.1.0"
edition = "2021"

# Add this to your dependencies section
[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
wasm-bindgen = "0.2.100"
rand = "0.8.5"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
microbit = "0.13"
panic-halt = "0.2"
serialport = "4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[build]
target = "thumbv7em-none-eabi"

[target.thumbv7em-none-eabi]
runner = "probe-rs run --chip nRF52833_xxAA"
rustflags = ["-C", "link-arg=-Tlink.x"]




